Added mastodon.social verification code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer>
   <p>&copy; {{ 'now' | date: "%Y" }} | {{site.title}}</p>
 </footer>
+
+<a hidden rel="me" href="https://mastodon.social/@kioraga">Mastodon</a>
